[project]
name = "dlt-scb"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Andreas Fred-Ojala", email = "Andreasfo@gmail.com" }
]
dependencies = [
    "httpx>=0.27.0",
    "polars>=0.20.13",
    "duckdb>=0.10.0",
    "s3fs>=2024.2.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "dlt_scb:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dlt_scb"]
